--- a/React_FileUpload/src/index.css
+++ b/React_FileUpload/src/index.css
@@ -1,3 +1,4 @@
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
